# Qt-Chess

./: .travis.yml  CMakeLists.txt  LICENSE  Pictures - Shortcut.lnk  README.md
include/: catch.hpp
qt/: chess-2.pro  chess-4.pro  chess-5.pro  chess-6-updated.pro  chess-7.pro  chess3.pro  counter.cpp  counter.h  display.cpp  display.h  engine.cpp  engine.h  main.cpp  res.qrc  space.cpp  space.h
qt/chess-files/: Board.cpp  Board.hpp  Game.cpp  Game.hpp  King.cpp  King.hpp  Knight.cpp  Knight.hpp  Piece.cpp  Queen.cpp  Queen.hpp  Rook.hpp  Square.hpp
source/: Bishop.cpp  Bishop.hpp  Board.cpp  Board.hpp  Game.cpp  Game.hpp  King.cpp  Pawn.cpp  Pawn.hpp  Piece.cpp  Piece.hpp  PieceController.cpp  PieceController.hpp  Rook.cpp  Square.cpp  Square.hpp  main.cpp
test/: BishopTest.cpp  BoardTest.cpp  GameTest.cpp  KingTest.cpp  KnightTest.cpp  QueenTest.cpp  RookTest.cpp  TestRunner.cpp
